moved ThingCommandEnforcement to things-persistence and adjusted to its new location * renamed Thing.getPolicyEntityId() to getPolicyId() for Ditto 3.0 * changed API return types of EnforcementReloaded interface to CompletionStages to work completely async * added mostly complete implementation of ThingEnforcerActor * ThingSupervisorActor now got some additional tasks, e.g. for "retrieve thing with inline policy" * moved enforcementConfig to central config file ditto-enforcement.conf * fixed most of the tests in ThingCommandEnforcementTest
Signed-off-by: Thomas Jaeckle <thomas.jaeckle@bosch.io>